# pinetime-hal

./: .gitignore  Cargo.toml  README.md  memory.x  openocd.cfg
.cargo/: config.toml
docs/: custom_openocd.md
examples/: rtic_demo.rs  test_on_host.rs
src/: accelerometer.rs  backlight.rs  battery.rs  battery_status.rs  ble.rs  delay.rs  lib.rs  vibrator.rs
