[package]
authors = ["redengin <sholstei@yahoo.com>"]
edition = "2018"
readme = "README.md"
name = "pinetime-hal"
version = "0.1.0"

[dependencies]
embedded-hal = "0.2.7"
nrf52832-hal = { version = "0.15", features = ["rt"], default-features = false }
rtic-monotonic = "1.0.0"
fugit = "0.3.5"
display-interface-spi = "0.4.1"
st7789 = { version = "0.6.1", features = ["graphics", "batch", "buffer"] }
cst816s = "0.1.4"

[dev-dependencies]
cortex-m = "0.7.4"
cortex-m-rt = "0.7.1"
cortex-m-rtic = "1.0.0"
panic-rtt-target = { version = "0.1.2", features = ["cortex-m"] }
rtt-target = { version = "0.3.1", features = ["cortex-m"]}



[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
