[package]
authors = ["redengin <sholstei@yahoo.com>"]
edition = "2018"
readme = "README.md"
name = "pinetime-hal"
version = "0.0.1"

[dependencies]
embedded-hal = "0.2"
nrf52832-hal = { version = "0.15", features = ["rt", "xxAA-package"], default-features = false }
rtic-monotonic = "1.0"
fugit = "0.3"
# lcd driver
display-interface-spi = "0.4"
st7789 = { version = "0.6" }
# touchpad driver
cst816s = "0.1"
# rubble-nrf52 = "0.0.3" # bluetooth driver


[dev-dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
cortex-m-rtic = "1.0"
panic-rtt-target = { version = "0.1", features = ["cortex-m"] }
rtt-target = { version = "0.3", features = ["cortex-m"]}
embedded-graphics = "0.7"


[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
